@@ -19,11 +19,11 @@ The lxpanel API consists of:
         * data/ui/netstatus.ui
 
     - The plugin API:
-        * /$(prefix)/include/lxpanel/plugin.h (Must be the same as src/plugin.h)
-        * /$(prefix)/include/lxpanel/panel.h
-        * /$(prefix)/include/lxpanel/misc.h
-        * /$(prefix)/include/lxpanel/icon-grid.h
-        * /$(prefix)/include/lxpanel/conf.h
+        * $(prefix)/include/lxpanel/plugin.h (Must be the same as src/plugin.h)
+        * $(prefix)/include/lxpanel/panel.h
+        * $(prefix)/include/lxpanel/misc.h
+        * $(prefix)/include/lxpanel/icon-grid.h
+        * $(prefix)/include/lxpanel/conf.h
 
     - The command line arguments to lxpanel and lxpanelctl.
 
